testdata/baselines/reference/compiler/tluaNoAwait.errors.txt
tluaNoAwait.tlua(14,10): error TS2304: Cannot find name 'await'.
tluaNoAwait.tlua(14,16): error TS1005: ';' expected.
tluaNoAwait.tlua(23,3): error TS1434: Unexpected keyword or identifier.
tluaNoAwait.tlua(23,9): error TS1434: Unexpected keyword or identifier.
tluaNoAwait.tlua(23,9): error TS2304: Cannot find name 'using'.
tluaNoAwait.tlua(23,15): error TS2304: Cannot find name 'r'.


==== tluaNoAwait.tlua (6 errors) ====
    // `await` is removed: it is an ordinary identifier everywhere — including
    // async function bodies and module top level — and async functions emit as
    // plain functions (no __awaiter, no transform).
    
    declare function compute(): number;
    
    async function f(): number
      local await = compute();
      return await;
    end
    
    // `await expr` no longer parses as a unary operator.
    async function g(): number
      return await f();
             ~~~~~
!!! error TS2304: Cannot find name 'await'.
                   ~
!!! error TS1005: ';' expected.
    end
    
    // Ordinary identifier at top level of a module.
    local await = 1;
    local usesAwait = await + 1;
    
    // `await using` is removed with it.
    function h(): void {
      await using r = compute();
      ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
            ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
            ~~~~~
!!! error TS2304: Cannot find name 'using'.
                  ~
!!! error TS2304: Cannot find name 'r'.
    }
    